...
            
            TextField(NSLocalizedString("enter_city_placeholder", comment:  "Placeholder for city input"), text: $city)
                .textFieldStyle(RoundedBorderTextFieldStyle())
                .padding(.horizontal)
                .padding(.bottom)
                .accessibilityLabel(NSLocalizedString("enter_city_placeholder", comment: "Placeholder for city input"))
                .accessibilityIdentifier("enter_city_textfield")
                .accessibilityHint(NSLocalizedString("enter_city_hint", comment: "Hint for city input"))
            
            Button(action: getWeather) {
                Text(NSLocalizedString("get_weather_report", comment: "Button to get weather report"))
                    .font(.headline)
                    .padding()
...
                    .background(Color.blue)
                    .foregroundColor(.white)
                    .cornerRadius(10)
                    .padding(.horizontal)
            }
            .accessibilityLabel(NSLocalizedString("get_weather_report", comment: "Button to get weather report"))
            .accessibilityIdentifier("get_weather_report_button")
            .accessibilityHint(NSLocalizedString("get_weather_report_hint", comment: "Hint for get weather report button"))
            Spacer()
        }
    }
    
    // Landscape layout using HStack
...
