...
                Text(String(format: NSLocalizedString("weather_in", comment: "Title showing weather in a city"), weatherData.name))
                    .font(.largeTitle)
                    .multilineTextAlignment(.center)
                    .padding(.top)
                    .accessibilityAddTraits(.isHeader)
                    .accessibilityLabel(NSLocalizedString("weather_in", comment: "Title showing weather in a city"))
                    .accessibilityIdentifier("weather_in_label")
                
                if let image = imageLoader.image {
                    Image(uiImage: image)
                        .resizable()
                        .scaledToFit()
                        .frame(width: 100, height: 100)
...
